--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-PORT=8001
 MONGODB_URI=mongodb+srv://vudinhphong261001:Alo0906412535@cluster0.nqfnlru.mongodb.net/
+REDIS_HOST=localhost
+REDIS_PORT=6379
