--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev": "npm run lint && npm run start:dev"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -30,6 +31,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@types/agenda": "^4.1.0",
     "agenda": "^5.0.0",
+    "bull": "^4.15.1",
     "joi": "^17.13.3",
     "mongoose": "^8.5.0",
     "nestjs-agenda": "^2.0.0",
@@ -40,6 +42,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
