--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/swagger": "^7.4.0",
     "@types/agenda": "^4.1.0",
+    "@vendia/serverless-express": "^4.12.6",
     "agenda": "^5.0.0",
+    "aws-lambda": "^1.0.7",
     "bull": "^4.15.1",
     "joi": "^17.13.3",
     "mongoose": "^8.5.0",
@@ -42,6 +44,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/aws-lambda": "^8.10.141",
     "@types/bull": "^4.10.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -54,6 +57,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "serverless-offline": "^13.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
